sfdx-source/force-app/main/default/objects/Opportunity_Brief_Relationship__c/Opportunity_Brief_Relationship__c.object-meta.xml
<CustomObject>
    <description>LEM-9264: Sync between Opportunity and Brief</description>
    <label>Opportunity Brief Relationship</label>
    <nameField>
        <displayFormat>OBR-{0000}</displayFormat>
        <label>Opportunity Brief Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Brief Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>