sfdx-source/force-app/main/default/objects/Opportunity_Brief_Relationship__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-9264: Sync between Opportunity and Brief</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Brief Relationships</relationshipLabel>
    <relationshipName>Opportunity_Brief_Relationship</relationshipName>
    <type>Lookup</type>
</CustomField>