sfdx-source/force-app/main/default/objects/Opportunity_Brief_Relationship__c/fields/Brief__c.field-meta.xml
<CustomField>
    <fullName>Brief__c</fullName>
    <description>LEM-9264: Sync between Opportunity and Brief</description>
    <label>Brief</label>
    <referenceTo>Brief__c</referenceTo>
    <relationshipLabel>Opportunity Brief Relationships</relationshipLabel>
    <relationshipName>Opportunity_Brief_Relationship</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>