sfdx-source/force-app/main/default/objects/Opportunity_Brief_Relationship__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>LEM-9264: Sync between Opportunity and Brief</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Brief Relationships</relationshipLabel>
    <relationshipName>Opportunity_Brief_Relationships</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>